--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 margin: 0;
             }
             canvas {
-                background-color: #ccc;
+                background-color: rgb(248, 110, 110);
                 display: block;
                 position: absolute;
                 top: 0;
@@ -24,7 +24,7 @@
 <body style="background-color: grey;"></body>
 <audio src="sample1.mp3" autoplay loop></audio>
 <body>
-
+apa
     <canvas id="seagull-flock" width="500" height="500"></canvas>
  
 
