--- a/index.html
+++ b/index.html
@@ -12,24 +12,43 @@
                 background-color: rgb(248, 110, 110);
                 display: block;
                 position: absolute;
-                top: 0;
+                top: 44;
                 left: 0;
                 right: 0;
                 bottom: 0;
                 width: 100%;
-                height: 100%;
+                height: 98%;
             }
         </style>
     </head>
-<body style="background-color: grey;"></body>
-<audio src="sample1.mp3" autoplay loop></audio>
-<body>
-apa
+<body style="background-color: grey;">
     <canvas id="seagull-flock" width="500" height="500"></canvas>
+
+    <div id="sample1-controls">
+        <button id="sample1-start-button">Start</button>
+        <button id="sample1-stop-button">Stop</button>
+      </div>
  
+ 
+
+</body>
 
 
 <script>
+
+const sample1Audio = new Audio("sample1.mp3");
+
+    // add event listeners to start buttons to play the corresponding audio element
+    document.getElementById("sample1-start-button").addEventListener("click", () => {
+      sample1Audio.play();
+    });
+     // add event listeners to stop buttons to pause the corresponding audio element
+     document.getElementById("sample1-stop-button").addEventListener("click", () => {
+      sample1Audio.pause(); 
+    });
+
+
+    document.body.insertAdjacentHTML('beforeend', `<audio src="sample1.mp3" autoplay></audio>`);
     // get reference to canvas element
     var canvas = document.getElementById('seagull-flock');
         if (canvas.getContext) {
@@ -76,7 +95,12 @@ apa
 
     // draw and move seagulls on canvas
     function drawSeagulls() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      
+
+    
+
+
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
       for (var i = 0; i < seagulls.length; i++) {
         seagulls[i].draw();
         seagulls[i].move();
@@ -85,7 +109,7 @@ apa
 
       for (var i = 0; i < 10; i++) {
   drawRandomLine();
-  playBackgroundMusic('sample1.mp3');
+
 }
 
 // or
@@ -108,17 +132,23 @@ function drawRandomLine() {
   ctx.stroke();
 }
 
-    // start animation
-    drawSeagulls();
-
-
-    function playBackgroundMusic(mp3FileUrl) {
+   
+    function playBackgroundMusic() {
   var audioElement = document.createElement('audio');
-  audioElement.setAttribute('src', mp3FileUrl);
+  audioElement.setAttribute('src', 'sample1.mp3');
   audioElement.setAttribute('autoplay', 'autoplay');
   audioElement.setAttribute('loop', 'loop');
   document.body.appendChild(audioElement);
 }
+
+var audioElement = document.createElement('audio');
+audioElement.setAttribute('src', 'sample1.mp3');
+audioElement.setAttribute('autoplay', 'autoplay');
+audioElement.setAttribute('loop', 'loop');
+document.body.appendChild(audioElement);
+
+ // start animation
+    drawSeagulls();
 
 
   </script>
